--- a/test/fixtures/example.html
+++ b/test/fixtures/example.html
@@ -17,7 +17,7 @@
 		</style>
 		<script type="text/javascript">
 			function someInlineScript(){
-				alert("This is some 'inline script")
+				alert('This is some "inline script\'');
 			}
 		</script>
 	</head>
